--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
             <p>This project is a demonstration of my skills in HTML, CSS, and JavaScript.</p>
         </section>
     </main>
-   
+   <button>Click Me!</button>
+   <script>
+       document.querySelector('button').addEventListener('click', function() {
+           alert('Button clicked!');
+       });
+       </script>
 </body>
 </html>
