--- a/final project/index.html
+++ b/final project/index.html
@@ -64,15 +64,15 @@
                 <h3>Book Your Stay</h3>
                 <form class="booking-form" id="booking-form">
                     <div class="form-group">
-                        <label for="check-in">Check-In</label>
+                        <label for="check-in"  style="color: black;">Check-In</label>
                         <input type="date" id="check-in" required>
                     </div>
                     <div class="form-group">
-                        <label for="check-out">Check-Out</label>
+                        <label for="check-out" style="color: black;">Check-Out</label>
                         <input type="date" id="check-out" required>
                     </div>
                     <div class="form-group">
-                        <label for="adults">Adults</label>
+                        <label for="adults" style="color: black;">Adults</label>
                         <select id="adults" required>
                             <option value="1">1 Adult</option>
                             <option value="2" selected>2 Adults</option>
@@ -81,7 +81,7 @@
                         </select>
                     </div>
                     <div class="form-group">
-                        <label for="children">Children</label>
+                        <label for="children" style="color: black;">Children</label>
                         <select id="children">
                             <option value="0" selected>No Children</option>
                             <option value="1">1 Child</option>
@@ -90,15 +90,15 @@
                         </select>
                     </div>
                     <div class="form-group">
-                        <label for="name">Full Name</label>
+                        <label for="name" style="color: black;">Full Name</label>
                         <input type="text" id="name" required>
                     </div>
                     <div class="form-group">
-                        <label for="email">Email</label>
+                        <label for="email" style="color: black;">Email</label>
                         <input type="email" id="email" required>
                     </div>
                     <div class="form-group">
-                        <label for="phone">Phone</label>
+                        <label for="phone" style="color: black;">Phone</label>
                         <input type="tel" id="phone" required>
                     </div>
                     <button type="submit" class="search-btn">Complete Booking</button>
