--- a/final project/index.html
+++ b/final project/index.html
@@ -34,7 +34,7 @@
                     <li><a href="#amenities">Amenities</a></li>
                     <li><a href="#reviews">Reviews</a></li>
                     <li><a href="#location">Location</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="about.html">About Us</a></li>
                     <li><a href="#" id="admin-toggle">Admin</a></li>
                 </ul>
             </nav>
