--- a/final project/index.html
+++ b/final project/index.html
@@ -22,7 +22,7 @@
                     <li><a href="#amenities">Amenities</a></li>
                     <li><a href="review.html">Reviews</a></li>
                     <li><a href="location.html">Location</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="terms.html">Terms & Policies</a></li>
                     <li><a href="#" id="admin-toggle">Admin</a></li>
                 </ul>
             </nav>
