link changed for admin

--- a/final project/index.html
+++ b/final project/index.html
@@ -23,7 +23,7 @@
                     <li><a href="review.html">Reviews</a></li>
                     <li><a href="location.html">Location</a></li>
                     <li><a href="terms.html">Terms & Policies</a></li>
-                    <li><a href="#" id="admin-toggle">Admin</a></li>
+                    <li><a href="admin.html" id="admin-toggle">Admin</a></li>
                 </ul>
             </nav>
             <a href="#booking" class="book-btn">Book Now</a>
@@ -339,12 +339,13 @@
                         <li><a href="#amenities">Amenities</a></li>
                         <li><a href="review.html">Reviews</a></li>
                         <li><a href="location.html">Location</a></li>
+                        <li><a href="admin.html">Admin</a></li>
                     </ul>
                 </div>
             </div>
             
             <div class="copyright">
-                <p>&copy; 2023 Blue Waves Hotel Zanzibar. All rights reserved.</p>
+                <p>&copy; 2025 Blue Waves Hotel Zanzibar. All rights reserved.</p>
             </div>
         </div>
     </footer>
